Add new node lessons

--- a/.gitignore
+++ b/.gitignore
@@ -159,3 +159,7 @@ dist
 0.9.restfulAPI/node_modules/
 0.5.axiosApiApp/node_modules/
 axiosApiApp/node_modules/
+1.0.C
+1.0.CRUD API/node_modules/
+1.1.lexAPIDevelopment/node_modules/
+1.2.Cookies/node_modules/
