add more training files

--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,5 @@ axiosApiApp/node_modules/
 1.0.CRUD API/node_modules/
 1.1.lexAPIDevelopment/node_modules/
 1.2.Cookies/node_modules/
+1.3.Sessions/node_modules/
+1.4.swaggerAPI/node_modules/
