--- a/.gitignore
+++ b/.gitignore
@@ -165,3 +165,6 @@ axiosApiApp/node_modules/
 1.2.Cookies/node_modules/
 1.3.Sessions/node_modules/
 1.4.swaggerAPI/node_modules/
+0.training/node_modules/
+
+2.0.usersProject/node_modules/
